--- a/src/main/resources/static/webApp/subsidyApplySubmit.html
+++ b/src/main/resources/static/webApp/subsidyApplySubmit.html
@@ -178,6 +178,7 @@
 				<button type="button" class="layui-btn" id="test1">
 					<i class="layui-icon">&#xe67c;</i>选择文件
 				</button>
+				<input style="display: none;" id="tycjrmd" type="text" name="nursingList" required  lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
 			</div>
 		</div>
 		<div class="layui-inline">
@@ -186,6 +187,7 @@
 				<button type="button" class="layui-btn" id="test2">
 					<i class="layui-icon">&#xe67c;</i>选择图片
 				</button>
+				<input style="display: none;" id="dbhqtdsrzm" type="text" name="lowIncomeCertificate" required  lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
 			</div>
 		</div>
 	</div>
