--- a/src/main/resources/static/webApp/disabledInfo.html
+++ b/src/main/resources/static/webApp/disabledInfo.html
@@ -550,8 +550,8 @@
                 {field: 'name', title: '残疾人姓名', align: 'center', width: 120, fixed: 'left', unresize: true},
                 {field: 'idNumber', title: '身份证号', align: 'center', width: 90, unresize: true},
                 {field: 'disabilityCertificateNumber', title: '残疾证号', align: 'center', width: 90, unresize: true},
-                {field: 'typeOfDisabilityId', title: '残疾类别', align: 'center', unresize: true},
-                {field: 'disabilityDegreeId', title: '残疾等级', align: 'center', width: 120, unresize: true},
+                {field: 'typeOfDisability', title: '残疾类别', align: 'center', unresize: true},
+                {field: 'disabilityDegree', title: '残疾等级', align: 'center', width: 120, unresize: true},
                 {field: 'address', title: '家庭住址', align: 'center', unresize: true},
 				{field: 'contactNumber', title: '联系电话', align: 'center', unresize: true},
 //                {fixed: 'right', title: '操作', align: 'center', toolbar: '#barDemo', width: 250}
