--- a/src/main/resources/static/webApp/manager/orgInfoSubmit.html
+++ b/src/main/resources/static/webApp/manager/orgInfoSubmit.html
@@ -35,7 +35,7 @@
 		<div class="layui-inline">
 			<label class="layui-form-label">登记注册时间</label>
 			<div class="layui-input-inline">
-				<input type="text" class="layui-input" id="registrationTime"  placeholder="请选择时间">
+				<input type="text" name="registrationCertificateNumber" class="layui-input" id="registrationTime"  placeholder="请选择时间">
 			</div>
 		</div>
 	</div>
