--- a/src/main/resources/static/webApp/subsidyApplyOrg.html
+++ b/src/main/resources/static/webApp/subsidyApplyOrg.html
@@ -52,7 +52,7 @@
 
 		table.render({
 			elem: '#mainTable'
-            ,url: '/api/project/getProjectAnalysis2?organizationId=2&sorts=modifyTime' //数据接口
+            ,url: '/api/apply/getStatistic?organizationId=2&sorts=modifyTime' //数据接口
             , request: {
 				pageName: 'page', //页码的参数名称，默认：page
 				limitName: 'number' //每页数据量的参数名，默认：limit
