--- a/src/main/resources/static/webApp/manager/orgInfoSubmit.html
+++ b/src/main/resources/static/webApp/manager/orgInfoSubmit.html
@@ -35,7 +35,7 @@
 		<div class="layui-inline">
 			<label class="layui-form-label">登记注册时间</label>
 			<div class="layui-input-inline">
-				<input type="text" name="registrationCertificateNumber" class="layui-input" id="registrationTime"  placeholder="请选择时间">
+				<input type="text" name="registrationTime" class="layui-input"  placeholder="请选择时间">
 			</div>
 		</div>
 	</div>
@@ -112,6 +112,11 @@
 		<div class="layui-input-inline">
 			<select id="cdistinct_sele" name="distinct" lay-verify="required">
 				<option value="雨花台区">区/县</option>
+			</select>
+		</div>
+		<div class="layui-input-inline">
+			<select id="" name="block" lay-verify="required">
+				<option value="xx街道">街道</option>
 			</select>
 		</div>
 
