--- a/src/main/resources/static/webApp/createServiceItemOrg.html
+++ b/src/main/resources/static/webApp/createServiceItemOrg.html
@@ -51,7 +51,7 @@
 	<div class="layui-form-item">
 		<label class="layui-form-label">所属机构名称</label>
 		<div class="layui-input-inline">
-			<input type="text" name="title" required  lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
+			<input type="text" name="name" required  lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
 		</div>
 	</div>
 	<div class="layui-form-item">
