--- a/src/main/resources/static/webApp/subsidyApplySubmit.html
+++ b/src/main/resources/static/webApp/subsidyApplySubmit.html
@@ -72,6 +72,11 @@
 				<option value="4">杭州</option>
 			</select>
 		</div>
+		<div class="layui-input-inline">
+			<select id="" name="block" lay-verify="required">
+				<option value="xx街道">街道</option>
+			</select>
+		</div>
 
 	</div>
 
