--- a/src/main/resources/static/webApp/manager/orgInfoSubmit.html
+++ b/src/main/resources/static/webApp/manager/orgInfoSubmit.html
@@ -349,6 +349,7 @@
 		form.on('submit(formDemo)', function(data){
 			// layer.msg(JSON.stringify(data.field));
 			var _data = data.field;
+            delete _data['file'];
 			_data.adminId = "1";
             _data.block = "xxx";
             _data.addressId = "ccccccc";
