--- a/src/main/resources/static/webApp/subsidyApplySubmit.html
+++ b/src/main/resources/static/webApp/subsidyApplySubmit.html
@@ -273,6 +273,7 @@
 		//监听提交
 		form.on('submit(formDemo)', function(data){
             var _data = data.field;
+            delete _data['file'];
             _data.adminId = "1";
             _data.organizationId = "2";
             $.ajax({
