--- a/src/main/resources/static/managerIndex.html
+++ b/src/main/resources/static/managerIndex.html
@@ -79,23 +79,23 @@
 						<dd><a href="webApp/manager/serviceInfo.html">服务项目信息</a></dd>
 					</dl>
 				</li>
-				<li class="layui-nav-item">
-					<a href="javascript:;" title="全区残疾人托养服务补贴资金申请明细">全区残疾人托养服务补贴资金申请明细</a>
-					<dl class="layui-nav-child">
-						<dd><a href="webApp/disabledHomeStatiscs.html" title="全区残疾人之家托养服务补贴资金统计">全区残疾人之家托养服务补贴资金统计</a></dd>
-						<dd><a href="webApp/manager/subsidyApplication.html" title="残疾人托养服务补贴资金申请明细">残疾人托养服务补贴资金申请明细</a></dd>
-					</dl>
-				</li>
+				<!--<li class="layui-nav-item">-->
+					<!--<a href="javascript:;" title="全区残疾人托养服务补贴资金申请明细">全区残疾人托养服务补贴资金申请明细</a>-->
+					<!--<dl class="layui-nav-child">-->
+						<!--<dd><a href="webApp/disabledHomeStatiscs.html" title="全区残疾人之家托养服务补贴资金统计">全区残疾人之家托养服务补贴资金统计</a></dd>-->
+						<!--<dd><a href="webApp/manager/subsidyApplication.html" title="残疾人托养服务补贴资金申请明细">残疾人托养服务补贴资金申请明细</a></dd>-->
+					<!--</dl>-->
+				<!--</li>-->
 
-				<li class="layui-nav-item">
-					<a href="webApp/manager/disabledClassifySubmit.html">残疾人分类</a>
-				</li>
-				<li class="layui-nav-item">
-					<a href="webApp/manager/disabledCountSubmit.html">全区残疾人统计</a>
-				</li>
-				<li class="layui-nav-item">
-					<a href="webApp/subsidyApplySubmit.html">补贴资金申请</a>
-				</li>
+				<!--<li class="layui-nav-item">-->
+					<!--<a href="webApp/manager/disabledClassifySubmit.html">残疾人分类</a>-->
+				<!--</li>-->
+				<!--<li class="layui-nav-item">-->
+					<!--<a href="webApp/manager/disabledCountSubmit.html">全区残疾人统计</a>-->
+				<!--</li>-->
+				<!--<li class="layui-nav-item">-->
+					<!--<a href="webApp/subsidyApplySubmit.html">补贴资金申请</a>-->
+				<!--</li>-->
 			</ul>
 		</div>
 	</div>
