--- a/src/main/resources/static/webApp/createServiceItemOrg.html
+++ b/src/main/resources/static/webApp/createServiceItemOrg.html
@@ -140,7 +140,7 @@
             $.ajax({
                 type: "POST",
                 url: "/api/project/saveAndFlush",
-                data: _data,
+                data: JSON.stringify(_data),
                 success: function (data) {
                     console.log(data);
 
