--- a/src/main/resources/static/webApp/manager/orgInfoSubmit.html
+++ b/src/main/resources/static/webApp/manager/orgInfoSubmit.html
@@ -356,7 +356,7 @@
             $.ajax({
                 type: "POST",
                 url: "/api/org/saveAndFlush",
-                data: _data,
+                data: JSON.stringify(_data),
                 success: function (data) {
                     console.log(data);
 
