传值修改传值修改

--- a/src/main/resources/static/webApp/createServiceItemOrg.html
+++ b/src/main/resources/static/webApp/createServiceItemOrg.html
@@ -141,6 +141,9 @@
                 type: "POST",
                 url: "/api/project/saveAndFlush",
                 data: JSON.stringify(_data),
+                dataType:"json",
+                contentType : 'application/json;charset=utf-8',
+                processData: false,
                 success: function (data) {
                     console.log(data);
 
