--- a/src/main/resources/static/webApp/manager/orgInfoSubmit.html
+++ b/src/main/resources/static/webApp/manager/orgInfoSubmit.html
@@ -357,6 +357,9 @@
                 type: "POST",
                 url: "/api/org/saveAndFlush",
                 data: JSON.stringify(_data),
+                dataType:"json",
+                contentType : 'application/json;charset=utf-8',
+                processData: false,
                 success: function (data) {
                     console.log(data);
 
