--- a/src/main/resources/static/webApp/manager/orgInfoSubmit.html
+++ b/src/main/resources/static/webApp/manager/orgInfoSubmit.html
@@ -353,6 +353,8 @@
 			_data.adminId = "1";
             _data.block = "xxx";
             _data.addressId = "ccccccc";
+            _data.addressId = "4324";
+
             $.ajax({
                 type: "POST",
                 url: "/api/org/saveAndFlush",
