--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>评估系统</title>
+	<title>雨花台区助残大数据平台</title>
 	<link rel="stylesheet" href="layui/css/layui.css">
 	<style>
 		.layui-nav dl.layui-nav-child a{
@@ -20,7 +20,7 @@
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
 	<div class="layui-header">
-		<div class="layui-logo" style="cursor: pointer;font-size:20px;" >评估系统</div>
+		<div class="layui-logo" style="cursor: pointer;font-size:20px;" >雨花台区助残大数据平台</div>
 		<!-- 头部区域（可配合layui已有的水平导航） -->
 		<!--<ul class="layui-nav layui-layout-left">-->
 		<!--<li class="layui-nav-item"><a href="">控制台</a></li>-->
@@ -77,7 +77,7 @@
 					<a href="javascript:;">残疾人托养服务补贴资金申请</a>
 					<dl class="layui-nav-child">
 						<dd><a href="webApp/subsidyApplySubmit.html">补贴资金申请</a></dd>
-						<dd><a href="webApp/subsidyApplyOrg.html">残疾人托养服务补贴资金申请汇总表</a></dd>
+						<dd><a href="webApp/subsidyApplyOrg.html">残疾人托养服务补贴资金申请汇总</a></dd>
 					</dl>
 				</li>
 			</ul>
