--- a/src/main/resources/static/webApp/disabledHomeStatiscs.html
+++ b/src/main/resources/static/webApp/disabledHomeStatiscs.html
@@ -56,7 +56,6 @@
                         <h2>全区残疾人之家托养服务补贴资金统计</h2>
                         <div class="numbers">
                             <p>残疾人托养服务补贴资金申请记录: <span class="bold-text">3</span> 条</p>
-                            <p>残疾人xxxxxxx记录: <span class="bold-text">6</span> 条</p>
                         </div>
                     </div>
                 </div>
@@ -67,12 +66,9 @@
                 <div class="project-info">
                     <div>
                         <button onclick="gotoDetail()" style="float: right;" type="button" class="layui-btn layui-btn-primary layui-btn-xs">详情</button>
-                        <h2>项目名称</h2>
+                        <h2>全区残疾人之家托养服务补贴资金统计</h2>
                         <div class="numbers">
-                            <p>总服务人数: <span class="bold-text">200</span></p>
-                            <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text">12000</span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>残疾人托养服务补贴资金申请记录: <span class="bold-text">3</span> 条</p>
                         </div>
                     </div>
                 </div>
@@ -83,12 +79,9 @@
                 <div class="project-info">
                     <div>
                         <button onclick="gotoDetail()" style="float: right;" type="button" class="layui-btn layui-btn-primary layui-btn-xs">详情</button>
-                        <h2>项目名称</h2>
+                        <h2>全区残疾人之家托养服务补贴资金统计</h2>
                         <div class="numbers">
-                            <p>总服务人数: <span class="bold-text">200</span></p>
-                            <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text">12000</span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>残疾人托养服务补贴资金申请记录: <span class="bold-text">3</span> 条</p>
                         </div>
                     </div>
                 </div>
@@ -99,12 +92,9 @@
                 <div class="project-info">
                     <div>
                         <button onclick="gotoDetail()" style="float: right;" type="button" class="layui-btn layui-btn-primary layui-btn-xs">详情</button>
-                        <h2>项目名称</h2>
+                        <h2>全区残疾人之家托养服务补贴资金统计</h2>
                         <div class="numbers">
-                            <p>总服务人数: <span class="bold-text">200</span></p>
-                            <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text">12000</span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>残疾人托养服务补贴资金申请记录: <span class="bold-text">3</span> 条</p>
                         </div>
                     </div>
                 </div>
@@ -115,12 +105,9 @@
                 <div class="project-info">
                     <div>
                         <button onclick="gotoDetail()" style="float: right;" type="button" class="layui-btn layui-btn-primary layui-btn-xs">详情</button>
-                        <h2>项目名称</h2>
+                        <h2>全区残疾人之家托养服务补贴资金统计</h2>
                         <div class="numbers">
-                            <p>总服务人数: <span class="bold-text">200</span></p>
-                            <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text">12000</span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>残疾人托养服务补贴资金申请记录: <span class="bold-text">3</span> 条</p>
                         </div>
                     </div>
                 </div>
@@ -131,12 +118,9 @@
                 <div class="project-info">
                     <div>
                         <button onclick="gotoDetail()" style="float: right;" type="button" class="layui-btn layui-btn-primary layui-btn-xs">详情</button>
-                        <h2>项目名称</h2>
+                        <h2>全区残疾人之家托养服务补贴资金统计</h2>
                         <div class="numbers">
-                            <p>总服务人数: <span class="bold-text">200</span></p>
-                            <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text">12000</span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>残疾人托养服务补贴资金申请记录: <span class="bold-text">3</span> 条</p>
                         </div>
                     </div>
                 </div>
@@ -147,12 +131,9 @@
                 <div class="project-info">
                     <div>
                         <button onclick="gotoDetail()" style="float: right;" type="button" class="layui-btn layui-btn-primary layui-btn-xs">详情</button>
-                        <h2>项目名称</h2>
+                        <h2>全区残疾人之家托养服务补贴资金统计</h2>
                         <div class="numbers">
-                            <p>总服务人数: <span class="bold-text">200</span></p>
-                            <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text">12000</span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>残疾人托养服务补贴资金申请记录: <span class="bold-text">3</span> 条</p>
                         </div>
                     </div>
                 </div>
@@ -163,17 +144,15 @@
                 <div class="project-info">
                     <div>
                         <button onclick="gotoDetail()" style="float: right;" type="button" class="layui-btn layui-btn-primary layui-btn-xs">详情</button>
-                        <h2>项目名称</h2>
+                        <h2>全区残疾人之家托养服务补贴资金统计</h2>
                         <div class="numbers">
-                            <p>总服务人数: <span class="bold-text">200</span></p>
-                            <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text">12000</span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>残疾人托养服务补贴资金申请记录: <span class="bold-text">3</span> 条</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
